# edival

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: README  scan837.c  scan997.c  scanedi.c
lib/: Makefile.am  Makefile.in  common.c  common.h  complextype.c  complextype.h  edifactparser.c  ediparse.c  ediparse.h  edival.h  hashtable.c  hashtable.h  schema.c  schema.h  simpletype.c  simpletype.h  statemachine.c  statemachine.h  x12parser.c  x12parser.h
